--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rails/webpacker": "5.4.0",
     "bootstrap": "^5.0.0-beta3",
     "bulma": "^0.9.3",
+    "easy-autocomplete": "^1.3.5",
     "jquery": "^3.6.0",
     "toastr": "^2.1.4",
     "turbolinks": "^5.2.0",
