--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@popperjs/core": "^2.9.2",
     "@rails/actioncable": "^6.0.0",
+    "@rails/actiontext": "^6.1.4",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.0",
@@ -12,6 +13,7 @@
     "easy-autocomplete": "^1.3.5",
     "jquery": "^3.6.0",
     "toastr": "^2.1.4",
+    "trix": "^1.2.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
